added lang select (base)

--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -302,4 +302,4 @@
   .navList ul li a::before {
     font-size: 26px;
   }
-}
+} */
