--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-image: url("./assets/images/bg/memphis.png");
+}
+
 /* ant button */
 button {
   box-shadow: none;
